--- a/SoongsilFunNoti/app/src/main/AndroidManifest.xml
+++ b/SoongsilFunNoti/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.shlee.soongsilfunnoti">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,12 +19,15 @@
             android:name=".NotificationService"
             android:enabled="true"
             android:exported="true" />
+        <service
+            android:name=".ProgramsManagementService"
+            android:enabled="true"
+            android:exported="true" />
 
         <activity android:name=".SettingActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
