--- a/SoongsilFunNoti/app/build.gradle
+++ b/SoongsilFunNoti/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'org.jsoup:jsoup:1.12.1'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 }
