--- a/SoongsilFunNoti/app/src/main/AndroidManifest.xml
+++ b/SoongsilFunNoti/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.shlee.soongsilfunnoti">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:allowBackup="true"
@@ -12,9 +14,23 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <service
-            android:name=".ParsingFunSystemService"
+            android:name=".DeviceBootReceiveService"
             android:enabled="true"
             android:exported="true"></service>
+
+        <receiver
+            android:name=".DeviceBootReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name=".ParsingFunSystemService"
+            android:enabled="true"
+            android:exported="true" />
         <service
             android:name=".NotificationService"
             android:enabled="true"
