백그라운드 서비스(ProgramManagementService) 작동 방식 변경
기존에 Started and Bound 형식으로 운용되던 ProgramManagementService를 Started 서비스로 변경하였습니다.
기존의 DeviceBootReceiverService의 이름을 ServiceStarterForegroundService로 바꾸었습니다.
위의 변경 사항들에 맞춰 MainActivity와 DeviceBootReceiver의 코드도 일부 수정하였습니다.

--- a/SoongsilFunNoti/app/src/main/AndroidManifest.xml
+++ b/SoongsilFunNoti/app/src/main/AndroidManifest.xml
@@ -14,9 +14,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <service
-            android:name=".DeviceBootReceiveService"
+            android:name=".ProgramsManagementService"
             android:enabled="true"
             android:exported="true"></service>
+        <service
+            android:name=".ServiceStarterForegroundService"
+            android:enabled="true"
+            android:exported="true" />
 
         <receiver
             android:name=".DeviceBootReceiver"
@@ -44,6 +48,7 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
