개발자 메일 주소 추가, 배포용 apk 생성

--- a/SoongsilFunNoti/app/src/main/AndroidManifest.xml
+++ b/SoongsilFunNoti/app/src/main/AndroidManifest.xml
@@ -36,10 +36,6 @@
             android:enabled="true"
             android:exported="true" />
         <service
-            android:name=".NotificationService"
-            android:enabled="true"
-            android:exported="true" />
-        <service
             android:name=".ProgramsManagementService"
             android:enabled="true"
             android:exported="true" />
@@ -48,7 +44,7 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
